force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Secondary_Contact_FS__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_FS__c</fullName>
    <label>Secondary Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>