force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Stage_of_Production__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Production__c</fullName>
    <label>Stage of Production</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Pre-production</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Post-production</fullName>
            </value>
            <value>
                <fullName>Distribution/Outreach</fullName>
            </value>
            <value>
                <fullName>Film Festival Circuit</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>