force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Status_FS__c.field-meta.xml
<CustomField>
    <fullName>Status_FS__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Rejected by Committee</fullName>
            </value>
            <value>
                <fullName>Never submitted to Committee</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>