force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Subject_3_FS__c.field-meta.xml
<CustomField>
    <fullName>Subject_3_FS__c</fullName>
    <label>Subject 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activism</fullName>
            </value>
            <value>
                <fullName>Addiction/Drug Abuse</fullName>
            </value>
            <value>
                <fullName>African-American</fullName>
            </value>
            <value>
                <fullName>Agriculture/Farming</fullName>
            </value>
            <value>
                <fullName>American West</fullName>
            </value>
            <value>
                <fullName>Animals/Nature</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Asian American</fullName>
            </value>
            <value>
                <fullName>Beauty Stereotypes</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Bullying</fullName>
            </value>
            <value>
                <fullName>Business/Economy</fullName>
            </value>
            <value>
                <fullName>Cinematography/Photography</fullName>
            </value>
            <value>
                <fullName>Coming of Age</fullName>
            </value>
            <value>
                <fullName>Corruption</fullName>
            </value>
            <value>
                <fullName>Crime/Incarceration</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Death and Dying</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Disabilities</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment Industry</fullName>
            </value>
            <value>
                <fullName>Environment/Sustainability</fullName>
            </value>
            <value>
                <fullName>Exploration</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Films on Film</fullName>
            </value>
            <value>
                <fullName>Fine Art</fullName>
            </value>
            <value>
                <fullName>Food/Drinks</fullName>
            </value>
            <value>
                <fullName>Friendship/Relationship/Romance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>