force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Supported_by_Sundance_Institute__c.field-meta.xml
<CustomField>
    <fullName>Supported_by_Sundance_Institute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this film/project supported by a lab, grant, etc from Sundance? Find out by searching for it here: http://history.sundance.org/</description>
    <inlineHelpText>Was this film/project supported by a lab, grant, etc from Sundance? Find out by searching for it here: http://history.sundance.org/</inlineHelpText>
    <label>Supported by Sundance Institute</label>
    <type>Checkbox</type>
</CustomField>