force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Synopsis_FS__c.field-meta.xml
<CustomField>
    <fullName>Synopsis_FS__c</fullName>
    <label>Synopsis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>