force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Topic_Summary__c.field-meta.xml
<CustomField>
    <fullName>Topic_Summary__c</fullName>
    <label>Topic Summary</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>