force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Twitter_FS__c.field-meta.xml
<CustomField>
    <fullName>Twitter_FS__c</fullName>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>