force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/Utah_Film_Center_Artist_Foundry_resident__c.field-meta.xml
<CustomField>
    <fullName>Utah_Film_Center_Artist_Foundry_resident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the filmmaker a member of the Artist Foundry?</description>
    <label>Utah Film Center Artist Foundry Resident</label>
    <type>Checkbox</type>
</CustomField>