force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/fields/W_9_Received_FS__c.field-meta.xml
<CustomField>
    <fullName>W_9_Received_FS__c</fullName>
    <label>W-9 Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>