force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>Date_Sponsorship_Began_FS__c</columns>
    <columns>Requested_Report_Due_Date_FS__c</columns>
    <columns>Director_FS__c</columns>
    <columns>Impact_Partner_Film_FS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_FS__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
</ListView>