force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Sponsorship_Began_FS__c</columns>
    <columns>Stage_of_Production__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>