force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_FS__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Completed</label>
</ListView>