force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Completed_nyscreened.listView-meta.xml
<ListView>
    <fullName>Completed_nyscreened</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_FS__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Film_Center_Screening_FS__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Completed but not yet screened</label>
</ListView>