force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Emmy_Nominated_Films.listView-meta.xml
<ListView>
    <fullName>Emmy_Nominated_Films</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Emmy Nominated Films</label>
</ListView>