force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Fiscal_Sponsor_Fees.listView-meta.xml
<ListView>
    <fullName>Fiscal_Sponsor_Fees</fullName>
    <columns>Date_Sponsorship_Began_FS__c</columns>
    <columns>Status_FS__c</columns>
    <columns>NAME</columns>
    <columns>Fiscal_Fee_Rate_FS__c</columns>
    <columns>Requested_Report_Due_Date_FS__c</columns>
    <columns>Annual_Report_Status__c</columns>
    <columns>Annual_Report_Year_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>Fiscal Sponsor Fees</label>
</ListView>