force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Inactive</label>
</ListView>