force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Local_Directors.listView-meta.xml
<ListView>
    <fullName>Local_Directors</fullName>
    <columns>NAME</columns>
    <columns>Director_FS__c</columns>
    <columns>Stage_of_Production__c</columns>
    <columns>Status_FS__c</columns>
    <columns>Film_Center_Screening_FS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Local_Filmmaker_FS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Local Directors</label>
</ListView>