force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Netflix_Films.listView-meta.xml
<ListView>
    <fullName>Netflix_Films</fullName>
    <columns>NAME</columns>
    <columns>Director_FS__c</columns>
    <columns>Synopsis_FS__c</columns>
    <filterScope>Everything</filterScope>
    <label>Netflix Films</label>
</ListView>