force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Past_Due_Reports.listView-meta.xml
<ListView>
    <fullName>Past_Due_Reports</fullName>
    <columns>NAME</columns>
    <columns>Requested_Report_Due_Date_FS__c</columns>
    <columns>Annual_Report_Status__c</columns>
    <columns>Date_Progress_Report_Received_FS__c</columns>
    <columns>Annual_Report_Year_1__c</columns>
    <columns>Contact_Name_FS__c</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requested_Report_Due_Date_FS__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Date_Progress_Report_Received_FS__c</field>
        <operation>equals</operation>
    </filters>
    <label>Past Due Reports</label>
</ListView>