force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Sundance_Film.listView-meta.xml
<ListView>
    <fullName>Sundance_Film</fullName>
    <columns>NAME</columns>
    <columns>Director_FS__c</columns>
    <columns>Synopsis_FS__c</columns>
    <filterScope>Everything</filterScope>
    <label>Sundance Films</label>
</ListView>