force-app/main/default/objects/UtFC_Fiscal_Sponsor_Film__c/listViews/Upcoming_Due_Reports.listView-meta.xml
<ListView>
    <fullName>Upcoming_Due_Reports</fullName>
    <columns>NAME</columns>
    <columns>Requested_Report_Due_Date_FS__c</columns>
    <columns>Contact_Name_FS__c</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requested_Report_Due_Date_FS__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Due Reports</label>
</ListView>